--- a/PROGETTO_IOT_GITHUB/configuration.yml
+++ b/PROGETTO_IOT_GITHUB/configuration.yml
@@ -9,7 +9,7 @@ server:
       bindHost: 0.0.0.0
 
 swagger:
-  resourcePackage: com.station.cooking.cheese.api_rest.resources
+  resourcePackage: com.station.cooking.cheese.api_rest.resource
 
 
   #logging:
