--- a/PROGETTO_IOT_GITHUB/pom.xml
+++ b/PROGETTO_IOT_GITHUB/pom.xml
@@ -20,8 +20,10 @@
         <apache-commons.version>3.9</apache-commons.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <dropwizard-swagger.version>1.3.9-1</dropwizard-swagger.version>
-        <dropwizard.version>1.3.9</dropwizard.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <dropwizard-swagger.version>2.0.0-1</dropwizard-swagger.version>
+        <dropwizard.version>2.0.19</dropwizard.version>
+        <apache.httpclient>4.5.12</apache.httpclient>
     </properties>
 
     <dependencies>
@@ -62,17 +64,33 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${apache.httpclient}</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+
+        <!-->QUESTA DIPENDENZA SE VIENE ATTIVATA NON FA PIU' FUNZIONARE NIENTE SUL LATO DEL REST API-->
+        <!-->SPERIAMO NON SERVA A NIENTE!!!-->
+        <!--<dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.eclipse.paho</groupId>
@@ -80,30 +98,30 @@
             <version>${paho.version}</version>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jackson.version}</version>
-        </dependency>
+        </dependency>-->
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jackson.version}</version>
-        </dependency>
+        </dependency>-->
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
-        </dependency>
+        </dependency>-->
 
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.databind.version}</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
